compiler/testData/diagnostics/tests/overload/ConflictingOverloadsFunsDifferentReturnInPackage.fir.kt
package qwertyuiop

<!CONFLICTING_OVERLOADS!>fun c(s: String) {
}<!>

<!CONFLICTING_OVERLOADS!>fun c(s: String) {
}<!>
